Bug 79604 - FORMATTING: Links in drawing objects don't work
Summary: FORMATTING: Links in drawing objects don't work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other Linux (All)
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: BSA target:4.4.0 target:4.3.3
Keywords:
: 41067 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-06-03 19:43 UTC by Máirín Duffy
Modified: 2015-05-13 10:26 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
I put this document together to demonstrate the problem. (33.12 KB, application/vnd.oasis.opendocument.text)
2014-06-03 19:43 UTC, Máirín Duffy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Máirín Duffy 2014-06-03 19:43:16 UTC
Created attachment 100369 [details]
I put this document together to demonstrate the problem.

Problem description: 

In normal body text, you can do Insert > Hyperlink and create a link that links out to a webpage or whatnot. When you have a document open in Writer, if you hover over this body text link, a tool tip comes up that says to Ctrl-Click to follow the link. If you ctrl-click the link, the link opens in your web browser.

In frame text, you can also do Insert > Hyperlink and create a link. However, it is not functional. It's present - if you double click on the frame it highlights, you can right-click it and edit the hyperlink properties... but there is no way to click on the link. Click, ctrl+click, shift+click all do nothing.

Expected behavior:

I would expect a hyperlink in a text frame to behave the same way hyperlinks behave in body text.

              
Operating System: Fedora
Version: 4.2.3.3 release
Comment 1 Cor Nouws 2014-06-03 20:41:33 UTC
Hi Máirin,

What you call a frame in your test document is a drawing object, appearance may be as a frame ;)
Links in Frames (Insert > Frame) do work.

Do you have any idea if this worked in previous versions?

Thanks,
Cor
Comment 2 Michael Stahl 2014-06-06 11:27:25 UTC
it looks like this did never work before.

in Impress you can just left-click on hyperlinks in
drawing objects to activate them; there is also
"Open Hyperlink" in the context menu.

neither works in Writer.
Comment 3 Michael Stahl 2014-10-07 21:36:17 UTC
fixed on master:

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5284e44ed0594a79b0cc22090a9a82b19962f6c2

clicking on URLs in Draw objects now executes the URL by default when Ctrl is held, and without Ctrl if you change the option in the security settings,
just like URLs in Writer's own text.

while the Draw object is being edited, clicking an URL does nothing, but Impress does it the same way so it's probably not a problem.
Comment 4 Michael Stahl 2014-10-24 12:45:25 UTC
the bugzilla bot is apparently on vacation, so add manually that the commit on the libreoffice-4-3 branch is fd41d725b596968e04fc4788a4481d7dc7e488df
Comment 5 Harald Koester 2015-05-13 10:25:50 UTC
From my point of view the solution is not completely satisfying:
(1) If you hover above the hyperlink inside a drawing object the tool tip is not displayed as it is displayed in normal text.
(2) If you put the cursor inside the text of the drawing object, then if you hover above the link, the symbol for a link (hand) is displayed, but the link does not work.

Reopen or new bug report?
Comment 6 Harald Koester 2015-05-13 10:26:49 UTC
*** Bug 41067 has been marked as a duplicate of this bug. ***