fdo#79604: sw: fix clicking on hyper-links in Draw objects

The URL is dispatched in MouseButtonUp(), but this relies on
MouseButtonDown() not selecting the drawing object when the cursor is
over an URL field.

(probably regression from commit 7e2f98d0a0c4a0f36a94353a256e7cc5caa3113b
 and commit 5ed14025645200c77249da364870f5772c01df17)

Change-Id: Ib1504baff5d1fffd6ce53b41d3ff726d8e4d5c9d